Second set of stream changes